# ros2_controllers_solo12

./: .gitignore  README.md
ros2_control_test_nodes/: CMakeLists.txt  package.xml
ros2_control_test_nodes/config/: impedance_ctrl.yaml
ros2_control_test_nodes/include/ros2_control_test_nodes/: ControllersNode.hpp
ros2_control_test_nodes/include/ros2_control_test_nodes/PD_control/: PD_control.hpp
ros2_control_test_nodes/include/ros2_control_test_nodes/mim_control/: centroidal_force_qp_controller.hpp  centroidal_pd_controller.hpp  demo_com_ctrl_cpp.hpp  impedance_controller.hpp
ros2_control_test_nodes/include/ros2_control_test_nodes/reactive_planners/: dcm_reactive_stepper.hpp  demo_reactive_planners_solo12_step_adjustment.hpp  quadruped_dcm_reactive_stepper.hpp
ros2_control_test_nodes/ros2_control_test_nodes/: node.py  test_controllers.py
ros2_control_test_nodes/ros2_control_test_nodes/PD_control/: controllers.py  pinocchio_helper_functions.py  potential_field_planner.py
ros2_control_test_nodes/ros2_control_test_nodes/mim_control/: demo_robot_com_ctrl.py  demo_robot_impedance.py  impedance_controller.py  qp_solver.py  robot_centroidal_controller.py  robot_impedance_controller.py
ros2_control_test_nodes/ros2_control_test_nodes/reactive_planners/: demo_reactive_planners_solo12_step_adjustment_walk.py
ros2_control_test_nodes/ros2_control_test_nodes/robot_properties_solo/: Solo12Config.py  Solo12Robot.py
ros2_control_test_nodes/src/: ControllersNode.cpp  TestControllers.cpp
ros2_control_test_nodes/src/Algorithms/PD_control/: PD_control.cpp
ros2_control_test_nodes/src/Algorithms/mim_control/: centroidal_force_qp_controller.cpp  centroidal_pd_controller.cpp  demo_com_ctrl_cpp.cpp  impedance_controller.cpp
ros2_control_test_nodes/src/Algorithms/reactive_planners/: dcm_reactive_stepper.cpp  dcm_vrp_planner.cpp  demo_reactive_planners_solo12_step_adjustment.cpp  dynamically_consistent_end_effector_trajectory.cpp  polynomial_end_effector_trajectory.cpp  quadruped_dcm_reactive_stepper.cpp  stepper_head.cpp
ros2_control_test_nodes/src/Algorithms/reactive_planners/srcpy/: dcm_reactive_stepper.cpp  dcm_vrp_planner.cpp  polynomial_end_effector_trajectory.cpp  quadruped_dcm_reactive_stepper.cpp  stepper_head.cpp
ros2_controllers_solo_bringup/: CMakeLists.txt  package.xml
ros2_controllers_solo_bringup/config/: solo_test_controllers.yaml
ros2_controllers_solo_bringup/launch/: solo_test_controllers.launch.py  solo_test_controllers_cpp.launch.py
